implementing SiteMap utility class

--- a/pyscript-lab/public/svelte/immutable/manifest.json
+++ b/pyscript-lab/public/svelte/immutable/manifest.json
@@ -1,10 +1,11 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-8b5dc075.js",
+    "file": "start-f872db4e.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-c88c2b4a.js",
+      "_index-ee947acd.js",
+      "_index-9f11fb9d.js",
       "_singletons-d1fb5791.js"
     ],
     "dynamicImports": [
@@ -19,103 +20,110 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-9ab2819b.js",
+    "file": "pages/__layout.svelte-8eaed9b2.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-c88c2b4a.js",
+      "_index-ee947acd.js",
       "_utils-4fc137b3.js",
+      "_index-9f11fb9d.js",
       "_singletons-d1fb5791.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-643e884e.css"
+      "assets/pages/__layout.svelte-3e474b7b.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "error.svelte-2e5f239b.js",
+    "file": "error.svelte-6ad6cf4c.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-c88c2b4a.js"
+      "_index-ee947acd.js"
     ]
   },
   "src/routes/e/bokeh/1.svelte": {
-    "file": "pages/e/bokeh/1.svelte-26a09661.js",
+    "file": "pages/e/bokeh/1.svelte-75ac7a78.js",
     "src": "src/routes/e/bokeh/1.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-c88c2b4a.js",
-      "_experiment_card-2702d48c.js",
+      "_index-ee947acd.js",
+      "_experiment_card-7f393778.js",
       "_utils-4fc137b3.js",
       "_singletons-d1fb5791.js"
     ]
   },
   "src/routes/e/bokeh/2.svelte": {
-    "file": "pages/e/bokeh/2.svelte-0185fa2d.js",
+    "file": "pages/e/bokeh/2.svelte-ba5b8d25.js",
     "src": "src/routes/e/bokeh/2.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-c88c2b4a.js",
-      "_experiment_card-2702d48c.js",
+      "_index-ee947acd.js",
+      "_experiment_card-7f393778.js",
       "_utils-4fc137b3.js",
       "_singletons-d1fb5791.js"
     ]
   },
   "src/routes/e/bokeh/index.svelte": {
-    "file": "pages/e/bokeh/index.svelte-1e7fdb14.js",
+    "file": "pages/e/bokeh/index.svelte-c597835b.js",
     "src": "src/routes/e/bokeh/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-c88c2b4a.js",
-      "_experiment_card-2702d48c.js",
+      "_index-ee947acd.js",
+      "_experiment_card-7f393778.js",
       "_utils-4fc137b3.js",
       "_RunPython-55a787c0.js",
       "_singletons-d1fb5791.js"
     ]
   },
   "src/routes/e/interop/index.svelte": {
-    "file": "pages/e/interop/index.svelte-d1924644.js",
+    "file": "pages/e/interop/index.svelte-d8816164.js",
     "src": "src/routes/e/interop/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-c88c2b4a.js",
-      "_experiment_card-2702d48c.js",
+      "_index-ee947acd.js",
+      "_experiment_card-7f393778.js",
       "_utils-4fc137b3.js",
       "_RunPython-55a787c0.js",
       "_singletons-d1fb5791.js"
     ]
   },
   "src/routes/e/repl.svelte": {
-    "file": "pages/e/repl.svelte-937622f5.js",
+    "file": "pages/e/repl.svelte-f716bd5d.js",
     "src": "src/routes/e/repl.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-c88c2b4a.js",
-      "_experiment_card-2702d48c.js",
+      "_index-ee947acd.js",
+      "_experiment_card-7f393778.js",
       "_utils-4fc137b3.js",
       "_singletons-d1fb5791.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-fe38c5f8.js",
+    "file": "pages/index.svelte-f44333db.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-c88c2b4a.js",
+      "_index-ee947acd.js",
       "_utils-4fc137b3.js",
       "_singletons-d1fb5791.js"
     ]
   },
-  "_index-c88c2b4a.js": {
-    "file": "chunks/index-c88c2b4a.js"
+  "_index-ee947acd.js": {
+    "file": "chunks/index-ee947acd.js"
+  },
+  "_index-9f11fb9d.js": {
+    "file": "chunks/index-9f11fb9d.js",
+    "imports": [
+      "_index-ee947acd.js"
+    ]
   },
   "_singletons-d1fb5791.js": {
     "file": "chunks/singletons-d1fb5791.js"
@@ -126,10 +134,10 @@
       "_singletons-d1fb5791.js"
     ]
   },
-  "_experiment_card-2702d48c.js": {
-    "file": "chunks/experiment_card-2702d48c.js",
+  "_experiment_card-7f393778.js": {
+    "file": "chunks/experiment_card-7f393778.js",
     "imports": [
-      "_index-c88c2b4a.js",
+      "_index-ee947acd.js",
       "_utils-4fc137b3.js"
     ]
   },
