--- a/pyscript-lab/public/svelte/immutable/manifest.json
+++ b/pyscript-lab/public/svelte/immutable/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-3a6ab04b.js",
+    "file": "start-e29d7654.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
@@ -20,7 +20,7 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-539ff4bd.js",
+    "file": "pages/__layout.svelte-5553ecfa.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -31,7 +31,7 @@
       "_singletons-d1fb5791.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-984fadee.css"
+      "assets/pages/__layout.svelte-29145ecc.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
@@ -44,7 +44,7 @@
     ]
   },
   "src/routes/e/bokeh/1.svelte": {
-    "file": "pages/e/bokeh/1.svelte-b4fdfeb4.js",
+    "file": "pages/e/bokeh/1.svelte-4737e78c.js",
     "src": "src/routes/e/bokeh/1.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -52,11 +52,12 @@
       "_index-5eb3cc7f.js",
       "_experiment_card-befa17fa.js",
       "_utils-4fc137b3.js",
+      "_RunPython-86cc62fa.js",
       "_singletons-d1fb5791.js"
     ]
   },
   "src/routes/e/bokeh/2.svelte": {
-    "file": "pages/e/bokeh/2.svelte-fa697bd7.js",
+    "file": "pages/e/bokeh/2.svelte-2724fb73.js",
     "src": "src/routes/e/bokeh/2.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -68,7 +69,7 @@
     ]
   },
   "src/routes/e/bokeh/index.svelte": {
-    "file": "pages/e/bokeh/index.svelte-1a265984.js",
+    "file": "pages/e/bokeh/index.svelte-5fbac7ce.js",
     "src": "src/routes/e/bokeh/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -81,7 +82,7 @@
     ]
   },
   "src/routes/e/interop/index.svelte": {
-    "file": "pages/e/interop/index.svelte-2d79e399.js",
+    "file": "pages/e/interop/index.svelte-ddadf843.js",
     "src": "src/routes/e/interop/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
