--- a/pyscript-lab/public/svelte/immutable/manifest.json
+++ b/pyscript-lab/public/svelte/immutable/manifest.json
@@ -1,11 +1,11 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-e29d7654.js",
+    "file": "start-c4411749.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-5eb3cc7f.js",
-      "_index-5e479832.js",
+      "_index-fbf23eb0.js",
+      "_index-2f88ce63.js",
       "_singletons-d1fb5791.js"
     ],
     "dynamicImports": [
@@ -15,19 +15,20 @@
       "src/routes/e/bokeh/2.svelte",
       "src/routes/e/bokeh/index.svelte",
       "src/routes/e/interop/index.svelte",
+      "src/routes/e/media/index.svelte",
       "src/routes/e/repl.svelte",
       "src/routes/index.svelte"
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-5553ecfa.js",
+    "file": "pages/__layout.svelte-c669b9c1.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5eb3cc7f.js",
+      "_index-fbf23eb0.js",
       "_utils-4fc137b3.js",
-      "_index-5e479832.js",
+      "_index-2f88ce63.js",
       "_singletons-d1fb5791.js"
     ],
     "css": [
@@ -35,95 +36,108 @@
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "error.svelte-3f9b7e68.js",
+    "file": "error.svelte-c6115ac2.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5eb3cc7f.js"
+      "_index-fbf23eb0.js"
     ]
   },
   "src/routes/e/bokeh/1.svelte": {
-    "file": "pages/e/bokeh/1.svelte-4737e78c.js",
+    "file": "pages/e/bokeh/1.svelte-d3d5377b.js",
     "src": "src/routes/e/bokeh/1.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5eb3cc7f.js",
-      "_experiment_card-befa17fa.js",
+      "_index-fbf23eb0.js",
+      "_experiment_card-90629e29.js",
       "_utils-4fc137b3.js",
       "_RunPython-86cc62fa.js",
       "_singletons-d1fb5791.js"
     ]
   },
   "src/routes/e/bokeh/2.svelte": {
-    "file": "pages/e/bokeh/2.svelte-2724fb73.js",
+    "file": "pages/e/bokeh/2.svelte-e404011e.js",
     "src": "src/routes/e/bokeh/2.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5eb3cc7f.js",
-      "_experiment_card-befa17fa.js",
+      "_index-fbf23eb0.js",
+      "_experiment_card-90629e29.js",
       "_utils-4fc137b3.js",
+      "_RunPython-86cc62fa.js",
       "_singletons-d1fb5791.js"
     ]
   },
   "src/routes/e/bokeh/index.svelte": {
-    "file": "pages/e/bokeh/index.svelte-5fbac7ce.js",
+    "file": "pages/e/bokeh/index.svelte-2b829321.js",
     "src": "src/routes/e/bokeh/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5eb3cc7f.js",
-      "_experiment_card-befa17fa.js",
+      "_index-fbf23eb0.js",
+      "_experiment_card-90629e29.js",
       "_utils-4fc137b3.js",
       "_RunPython-86cc62fa.js",
       "_singletons-d1fb5791.js"
     ]
   },
   "src/routes/e/interop/index.svelte": {
-    "file": "pages/e/interop/index.svelte-ddadf843.js",
+    "file": "pages/e/interop/index.svelte-f76a665d.js",
     "src": "src/routes/e/interop/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5eb3cc7f.js",
-      "_experiment_card-befa17fa.js",
+      "_index-fbf23eb0.js",
+      "_experiment_card-90629e29.js",
       "_utils-4fc137b3.js",
       "_RunPython-86cc62fa.js",
       "_singletons-d1fb5791.js"
     ]
   },
+  "src/routes/e/media/index.svelte": {
+    "file": "pages/e/media/index.svelte-96fbce77.js",
+    "src": "src/routes/e/media/index.svelte",
+    "isEntry": true,
+    "isDynamicEntry": true,
+    "imports": [
+      "_index-fbf23eb0.js",
+      "_experiment_card-90629e29.js",
+      "_utils-4fc137b3.js",
+      "_singletons-d1fb5791.js"
+    ]
+  },
   "src/routes/e/repl.svelte": {
-    "file": "pages/e/repl.svelte-38a5bc37.js",
+    "file": "pages/e/repl.svelte-9941786f.js",
     "src": "src/routes/e/repl.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5eb3cc7f.js",
-      "_experiment_card-befa17fa.js",
+      "_index-fbf23eb0.js",
+      "_experiment_card-90629e29.js",
       "_utils-4fc137b3.js",
       "_singletons-d1fb5791.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-60eab414.js",
+    "file": "pages/index.svelte-b238d910.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5eb3cc7f.js",
+      "_index-fbf23eb0.js",
       "_utils-4fc137b3.js",
       "_singletons-d1fb5791.js"
     ]
   },
-  "_index-5eb3cc7f.js": {
-    "file": "chunks/index-5eb3cc7f.js"
+  "_index-fbf23eb0.js": {
+    "file": "chunks/index-fbf23eb0.js"
   },
-  "_index-5e479832.js": {
-    "file": "chunks/index-5e479832.js",
+  "_index-2f88ce63.js": {
+    "file": "chunks/index-2f88ce63.js",
     "imports": [
-      "_index-5eb3cc7f.js"
+      "_index-fbf23eb0.js"
     ]
   },
   "_singletons-d1fb5791.js": {
@@ -135,10 +149,10 @@
       "_singletons-d1fb5791.js"
     ]
   },
-  "_experiment_card-befa17fa.js": {
-    "file": "chunks/experiment_card-befa17fa.js",
+  "_experiment_card-90629e29.js": {
+    "file": "chunks/experiment_card-90629e29.js",
     "imports": [
-      "_index-5eb3cc7f.js",
+      "_index-fbf23eb0.js",
       "_utils-4fc137b3.js"
     ]
   },
